turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:22: error: not found: value L
		case L => gauche(); setCouleurSol(colors((i+1) % (colors.length))); 
                     ^LangtonsAnt:22: error: not found: value setCouleurSol
		case L => gauche(); setCouleurSol(colors((i+1) % (colors.length))); 
                                    ^LangtonsAnt:24: error: not found: value R
		case R => droite(); setCouleurSol(colors((i+1) % (colors.length)));
                     ^LangtonsAnt:24: error: not found: value setCouleurSol
		case R => droite(); setCouleurSol(colors((i+1) % (colors.length)));
                                    ^